--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     ],
     "explorer.confirmDelete": false,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Electron",
+    "workbench.colorTheme": "Gruvbox Material Hard Dark",
     "material-icon-theme.folders.theme": "specific",
     "files.autoSave": "afterDelay",
     "peacock.favoriteColors": [
@@ -70,11 +70,14 @@
         "vs-kubernetes.minikube-path": "/home/tarekali/.vs-kubernetes/tools/minikube/linux-amd64/minikube"
     },
     "liveServer.settings.donotShowInfoMsg": true,
-    "window.zoomLevel": 3,
+    "window.zoomLevel": 0,
     "git.enableSmartCommit": true,
     "workbench.colorCustomizations": {},
     "editor.fontFamily": "'Fira Code'",
     "editor.fontLigatures": true,
     "terminal.integrated.fontFamily": "monospace",
-    "editor.fontWeight": "700"
+    "editor.fontWeight": "700",
+    "editor.cursorStyle": "underline-thin",
+    "go.formatTool": "goimports"
 }
+
