--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,3 @@
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
     info title
 
@@ -423,7 +421,7 @@ disk_subtitle="mount"
 # vlc
 # xmms2d
 # yarock
-music_player="spotify"
+music_player="auto"
 
 # Format to display song information.
 #
@@ -471,7 +469,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(4 6 1 8 8 6)
+colors=(distro)
 
 
 # Text Options
@@ -626,7 +624,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="w3m"
+image_backend="auto"
 
 # Image Source
 #
@@ -750,7 +748,7 @@ xoffset=0
 # Default: ''
 # Values:  'color', 'blue'
 # Flag:    --bg_color
-background_color=
+background_color=''
 
 
 # Misc Options
