--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,63 +1,9 @@
 {
     "explorer.confirmDelete": false,
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Wal Bordered",
+    "workbench.colorTheme": "Wal",
     "material-icon-theme.folders.theme": "specific",
     "files.autoSave": "afterDelay",
-    "peacock.favoriteColors": [
-        {
-            "name": "Angular Red",
-            "value": "#b52e31"
-        },
-        {
-            "name": "Auth0 Orange",
-            "value": "#eb5424"
-        },
-        {
-            "name": "Azure Blue",
-            "value": "#007fff"
-        },
-        {
-            "name": "C# Purple",
-            "value": "#68217A"
-        },
-        {
-            "name": "Gatsby Purple",
-            "value": "#639"
-        },
-        {
-            "name": "Go Cyan",
-            "value": "#5dc9e2"
-        },
-        {
-            "name": "Java Blue-Gray",
-            "value": "#557c9b"
-        },
-        {
-            "name": "JavaScript Yellow",
-            "value": "#f9e64f"
-        },
-        {
-            "name": "Mandalorian Blue",
-            "value": "#1857a4"
-        },
-        {
-            "name": "Node Green",
-            "value": "#215732"
-        },
-        {
-            "name": "React Blue",
-            "value": "#00b3e6"
-        },
-        {
-            "name": "Something Different",
-            "value": "#832561"
-        },
-        {
-            "name": "Vue Green",
-            "value": "#42b883"
-        }
-    ],
     "editor.formatOnSave": true,
     "explorer.confirmDragAndDrop": false,
     "vs-kubernetes": {
@@ -67,7 +13,7 @@
         "vs-kubernetes.minikube-path": "/home/tarekali/.vs-kubernetes/tools/minikube/linux-amd64/minikube"
     },
     "liveServer.settings.donotShowInfoMsg": true,
-    "window.zoomLevel": 1,
+    "window.zoomLevel": 0,
     "git.enableSmartCommit": true,
     "workbench.colorCustomizations": {},
     "editor.fontFamily": "JetBrains Mono",
@@ -78,4 +24,5 @@
     "go.formatTool": "goimports",
     "background.enabled": true,
     "liveServer.settings.donotVerifyTags": true,
+    "workbench.startupEditor": "newUntitledFile",
 }
