--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,4 +25,15 @@
     "background.enabled": true,
     "liveServer.settings.donotVerifyTags": true,
     "workbench.startupEditor": "newUntitledFile",
+    "ruby.useBundler": true, //run non-lint commands with bundle exec
+    "ruby.useLanguageServer": true, // use the internal language server (see below)
+    "ruby.lint": {
+        "rubocop": {
+            "useBundler": true // enable rubocop via bundler
+        },
+        "reek": {
+            "useBundler": true // enable reek via bundler
+        }
+    },
+    "ruby.format": "rubocop" // use rubocop for formatting
 }
