--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,7 +49,8 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 # unbind-key 'C-\'
 # bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key -n C-\ if-shell "$is_vim" "send-keys 'C-\'"# Toggle pane full screen
-bind-key F resize-pane -Zbind-key J resize-pane -D 5
+bind-key F resize-pane -Z
+bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 # Don't set this because it is the built in binding for jumping to the previous
